--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html> 
 <html> 
 <body> 
-
+E1
+<video width="400" controls>
+  <source src="https://1fgm8zw.oloadcdn.net/dl/l/-9-UQCdyTK6a9OWE/9SVtLvfyhr4/Hot.Streets.S01E01.Got.a.Minute.for.Love.720p.AS.WEB-DL.AAC2.0.H.264-RTN.mkv.mp4?mime=true" type="video/mp4">
+</video>
+E2
 <video width="400" controls>
   <source src="https://1fhjm3t.oloadcdn.net/dl/l/ZoCOs4eKDCyWUDDQ/MkHj0FcJsME/hot.streets.s01e02.hdtv.x264-w4f.mp4?mime=true" type="video/mp4">
- 
-  Your browser does not support HTML5 video.
+</video>
+E3
+<video width="400" controls>
+  <source src="https://1fhjm3t.oloadcdn.net/dl/l/ZoCOs4eKDCyWUDDQ/MkHj0FcJsME/hot.streets.s01e02.hdtv.x264-w4f.mp4?mime=true" type="video/mp4">
+</video>
+E4
+<video width="400" controls>
+  <source src="https://1fhjm3t.oloadcdn.net/dl/l/ZoCOs4eKDCyWUDDQ/MkHj0FcJsME/hot.streets.s01e02.hdtv.x264-w4f.mp4?mime=true" type="video/mp4">
+</video>
+E5
+<video width="400" controls>
+  <source src="https://1fhjlu4.oloadcdn.net/dl/l/bITHxkNbgV0bzw9K/klPijd71MXc/samNL2bIUevHfpHQUIp1SbFv80aDFm7Z.mkv.mp4?mime=true" type="video/mp4">
+</video>
+E6
+<video width="400" controls>
+  <source src="https://1fhjm3t.oloadcdn.net/dl/l/ZoCOs4eKDCyWUDDQ/MkHj0FcJsME/hot.streets.s01e02.hdtv.x264-w4f.mp4?mime=true" type="video/mp4">
 </video>
 
-<p>
-Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-</p>
+  
 
 </body> 
 </html>
