--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
   <figure id="video_player">
   <div id="video_container">
   <video controls poster="http://thenewcode.com/assets/images/vid-glacier.jpg" playsinline>
-    <source src="http://thenewcode.com/assets/videos/glacier.mp4" type="video/mp4">
-    <source src="http://thenewcode.com/assets/videos/glacier.webm" type="video/webm">
+    <source src="https://1fgm902.oloadcdn.net/dl/l/ljRKkko7kx8HIwwl/6PZp5vsIKmo/The.Jellies.S01E01.Gangstas.Paradise.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" type="video/mp4">
 </video>
 </div>
 <figcaption>
