--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </video>
 </div>
 <figcaption>
-  <a href="http://thenewcode.com/assets/videos/glacier.mp4" class="currentvid">
+  <a href="https://1fgm902.oloadcdn.net/dl/l/ljRKkko7kx8HIwwl/6PZp5vsIKmo/The.Jellies.S01E01.Gangstas.Paradise.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" class="currentvid">
     <img src="http://thenewcode.com/assets/images/vid-glacier.jpg" alt="Athabasca Glacier">
   </a>
   <a href="http://thenewcode.com/assets/videos/lake.mp4">
