--- a/index.html
+++ b/index.html
@@ -3,88 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Automatic HTML5 Video Playlist</title>
-  
-  
-  
-      <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-      body { background: #222; }
-#video_player { 
-  display: table; line-height: 0;
-  font-size: 0; background: #000;
-  max-width: 1000px;
-  margin: 0 auto;
-}
-#video_container { 
-  position: relative;
-}
-#video_player div, #video_player figcaption { 
-  display: table-cell;
-  vertical-align: top; 
-}
-#video_container video { 
-  position: absolute; 
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-}
-#video_player figcaption { width: 25%; }
-#video_player figcaption a { display: block; }
-#video_player figcaption a { 
-  opacity: .5;
-  transition: 1s opacity; 
-}
-#video_player figcaption a img, figure video { 
-  width: 100%; height: auto; 
-}
-#video_player figcaption a.currentvid, #video_player figcaption a:hover, #video_player figcaption a:focus { opacity: 1; }
-@media (max-width: 700px) {
-  #video_player video, #video_player figcaption { 
-    display: table-row; 
-  }
-#video_container { padding-top: 56.25%; }
-#video_player figcaption a { 
-  display: inline-block; width: 33.33%; 
-}
-}
-
-    </style>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-
-</head>
+ </head>
 
 <body>
 
-  <figure id="video_player">
-  <div id="video_container">
-  <video controls poster="http://thenewcode.com/assets/images/vid-glacier.jpg" playsinline>
-    <source src="https://1fgm902.oloadcdn.net/dl/l/ljRKkko7kx8HIwwl/6PZp5vsIKmo/The.Jellies.S01E01.Gangstas.Paradise.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" type="video/mp4">
+  <video controls playsinline autoplay>
+    <source src="https://ph2dok.oloadcdn.net/dl/l/dYoN-J2fKPPdfR1T/GQYxcdTdgOs/The.Jellies.S01E02.Rays.Perfect.Date.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" type="video/mp4">
 </video>
-</div>
-<figcaption>
-  <a href="https://1fgm902.oloadcdn.net/dl/l/ljRKkko7kx8HIwwl/6PZp5vsIKmo/The.Jellies.S01E01.Gangstas.Paradise.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" class="currentvid">
-    <img src="http://thenewcode.com/assets/images/vid-glacier.jpg" alt="Athabasca Glacier">
-  </a>
-  <a href="http://thenewcode.com/assets/videos/lake.mp4">
-    <img src="http://thenewcode.com/assets/images/vid-lake.jpg" alt="Athabasca Lake">
-  </a>
-  <a href="http://thenewcode.com/assets/videos/mountain.mp4">
-    <img src="http://thenewcode.com/assets/images/vid-mountain.jpg" alt="Mountain">
-  </a>
-</figcaption>
-</figure>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
 </body>
 
 </html>
