--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <video controls playsinline autoplay>
-    <source src="https://ph2dok.oloadcdn.net/dl/l/dYoN-J2fKPPdfR1T/GQYxcdTdgOs/The.Jellies.S01E02.Rays.Perfect.Date.HDTV.x264CRiMSONettv_1511368947.avi.mp4?mime=true" type="video/mp4">
+    <source src="https://1fgm8k5.oloadcdn.net/dl/l/pP1pLaE9yRR3j8As/mZXcGY72QwI/the.jellies.s01e03.720p.hdtv.x264mtg_1511369486.avi.mp4?mime=true" type="video/mp4">
 </video>
 </body>
 
