--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
   <video controls playsinline autoplay>
-    <source src="https://1fhjm37.oloadcdn.net/dl/l/LqnPJEDsPf7UIMyN/R5VsYeyiYYA/the.jellies.s01e06.720p.hdtv.x264mtg_1511836390.avi.mp4?mime=true" type="video/mp4">
+    <source src="http://scw-157956.gphoto.stream/videos/5a73bd7a9d61cb0fc713b84e.mp4"
+                 type="video/mp4">
     </video>
 </body>
 
