--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <video controls playsinline autoplay>
-    <source src="http://scw-157956.gphoto.stream/videos/5a73bd7a9d61cb0fc713b84e.mp4"
+    <source src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
                  type="video/mp4">
     </video>
 </body>
