--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
  </head>
 
 <body>
-
-  <video controls playsinline autoplay>
-    <source src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
+  <script>
+document.getElementById('vid1').addEventListener('loadedmetadata', function() {
+  this.currentTime = 50;
+}, false);
+    </script>
+  <video controls autoplay>
+    <source id="vid1" src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
                  type="video/mp4">
     </video>
 </body>
