--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ document.getElementById('vid1').addEventListener('loadedmetadata', function() {
     </script>
 <body>
   
-  <video controls autoplay>
-    <source id="vid1" src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
+  <video id="vid1" controls autoplay>
+    <source src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
                  type="video/mp4">
     </video>
 </body>
