--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8">
  </head>
-<script>
-document.getElementById('vid1').addEventListener('loadedmetadata', function() {
-  this.currentTime = 50;
-}, false);
-  
-    </script>
 <body>
   
   <video id="vid1" controls autoplay>
     <source src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
                  type="video/mp4">
     </video>
+  <script>
+document.getElementById('vid1').addEventListener('loadedmetadata', function() {  this.currentTime = 50; }, false);
+  
+    </script>
+
 </body>
 
 </html>
