--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
   <video id="vid1" controls autoplay>
-    <source src="http://link1.ntcdn.us/cdn2_vidcdn_pro/movie/DXN/T3/10/Star%20Wars%20The%20Last%20Jedi%20Watch%20Online%20-%20Watch%20Movies%20for%20FREE%20-%20SeeHD.PL.MP4"
+    <source src="https://openload.co/stream/dOeZN6oXII8~1522125116~5.198.0.0~pfcyEuZm"
                  type="video/mp4">
     </video>
   <script>
