--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>
   
   <video id="vid1" controls autoplay>
+    <source src="https://openload.co/stream/HZlLzFiQjjg~1522184103~194.207.0.0~YMObYJ8p"
+                 type="video/mp4">
+
     <source src="https://openload.co/stream/dOeZN6oXII8~1522125116~5.198.0.0~pfcyEuZm"
                  type="video/mp4">
     </video>
   
-
 </body>
 
 </html>
